--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ body {
   user-select: none;
 }
 
-a {
+a:not(.button) {
   text-decoration: none;
   margin: 1rem;
   color: var(--text-color);
@@ -130,12 +130,12 @@ a.sortable-ghost {
   visibility: hidden;
 }
 
-a:hover {
+a:not(.button):hover {
   color: var(--text-color);
   opacity: 0.5;
 }
 
-a:visited {
+a:not(.button):visited {
   color: var(--text-color);
 }
 
@@ -264,6 +264,10 @@ a:visited {
   margin-top: 3rem;
 }
 
+.button-group.no-margin {
+  margin-top: 0;
+}
+
 .button-group .button {
   margin: 0;
   margin-left: 1rem;
@@ -281,6 +285,7 @@ a:visited {
   display: inline;
   cursor: pointer;
   vertical-align: middle;
+  text-decoration: none;
 }
 
 .button.outlined {
@@ -385,10 +390,26 @@ a:visited {
   will-change: width, height;
 }
 
+.dialog.corner {
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  max-width: 384px;
+  width: auto;
+  min-width: 256px;
+  margin: 1rem;
+}
+
 .dialog-title {
   margin-bottom: 1rem;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 500;
+}
+
+.dialog-body {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.3;
 }
 
 .dialog.hidden {
