--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,6 +111,10 @@
   display: none;
 }
 
+code {
+  user-select: all;
+}
+
 /* */
 
 body {
@@ -565,4 +569,19 @@ summary {
   99% {
     display: none;
   }
+}
+
+#holiday-canvas {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -1;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  background: transparent;
 }
