Add support for Time Zone Clocks
Adds the ability to track time zones around the world.

- You can add, remove, and rearrange time zone clocks.
- Time zone clocks will display localized clock and respect hour cycle

--- a/src/css/quill.bubble.css
+++ b/src/css/quill.bubble.css
@@ -17,8 +17,8 @@
 }
 
 ::selection {
-  background-color: var(--text-color);
-  color: var(--background-color);
+  background-color: var(--focus-color);
+  color: #fff;
 }
 
 .ql-container.ql-disabled .ql-tooltip {
@@ -422,7 +422,6 @@
   background: none;
   border: none;
   cursor: pointer;
-  display: inline-block;
   float: left;
   height: 24px;
   padding: 3px 5px;
