--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,7 +125,11 @@ body {
   user-select: none;
 }
 
-a:not(.button) {
+a.url:visited {
+  color: var(--focus-color);
+}
+
+a:not(.button):not(.url) {
   text-decoration: none;
   margin: 1rem;
   color: var(--text-color);
@@ -135,16 +139,16 @@ a:not(.button) {
   transition: 200ms ease-in-out opacity;
 }
 
-a.sortable-ghost {
+.sortable-ghost {
   visibility: hidden;
 }
 
-a:not(.button):hover {
+a:not(.button):not(.url):hover {
   color: var(--text-color);
   opacity: 0.5;
 }
 
-a:not(.button):visited {
+a:not(.button):not(.url):visited {
   color: var(--text-color);
 }
 
@@ -184,7 +188,7 @@ a:not(.button):visited {
 .layout {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 8fr 1fr;
+  grid-template-rows: 1fr 8fr auto auto;
   height: 100vh;
   width: 100vw;
 }
@@ -232,6 +236,7 @@ a:not(.button):visited {
 }
 
 .devices-box {
+  margin: 2rem;
   text-align: center;
   align-self: center;
 }
@@ -310,11 +315,13 @@ a:not(.button):visited {
   background-color: transparent;
   border: 1px solid var(--text-color);
   color: var(--text-color);
+  opacity: 0.6;
 }
 
 .button.outlined:hover {
   background-color: var(--text-color);
   color: var(--background-color);
+  opacity: 1;
 }
 
 .button.primary {
@@ -490,6 +497,7 @@ a:not(.button):visited {
   background: var(--input-background);
   caret-color: var(--input-color);
   color: var(--input-color);
+  height: 2rem;
 }
 
 .input-container select {
@@ -530,6 +538,44 @@ summary {
   font-size: 0.875rem;
   font-weight: 400;
   cursor: pointer;
+}
+
+#tz-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.tz-clock {
+  display: block;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  transition: opacity 200ms ease-in-out;
+}
+
+.tz-clock:hover {
+  opacity: 0.65;
+}
+
+.tz-clock:active {
+  opacity: 0.5;
+}
+
+.tz-clock {
+  text-align: left;
+  margin: 0.5rem;
+}
+
+.tz-name {
+  font-size: 1rem;
+  margin-bottom: 0.15rem;
+  opacity: 0.8;
+  font-weight: 100;
+}
+
+.tz-time {
+  font-size: 1.25rem;
+  font-weight: 300;
 }
 
 @media print {
