--- a/src/css/quill.bubble.css
+++ b/src/css/quill.bubble.css
@@ -638,7 +638,7 @@
 .ql-bubble .ql-editor code,
 .ql-bubble .ql-editor pre {
   background-color: rgba(0,0,0,0.4);
-  border-radius: 3px;
+  border-radius: 0.375rem;
 }
 .ql-bubble .ql-editor pre {
   white-space: pre-wrap;
@@ -877,7 +877,7 @@
 }
 .ql-bubble .ql-tooltip {
   background-color: var(--menu-background);
-  border-radius: 3px;
+  border-radius: 0.375rem;
   color: #000;
   box-shadow: 0 4px 10px 3px rgba(0, 0, 0, 0.1);
 }
@@ -935,7 +935,6 @@
 }
 .ql-container.ql-bubble:not(.ql-disabled) a::before {
   background-color: var(--menu-background);
-  border-radius: 0;
   top: -5px;
   font-size: 12px;
   color: var(--menu-color);
@@ -944,7 +943,7 @@
   overflow: hidden;
   padding: 8px;
   text-decoration: none;
-  border-radius: 3px;
+  border-radius: 0.375rem;
   z-index: 1;
 }
 .ql-container.ql-bubble:not(.ql-disabled) a::after {
