--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -54,6 +54,11 @@
   margin-right: 0.5rem;
 }
 
+.action .favicon img {
+  width: 100%;
+  height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background-color: #292A2D;
